--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,12 +6,32 @@
 		margin-right: -65px;
 	}
 
+	&--gutters-large {
+		margin-right: -100px;
+	}
+
+		&--gutters-small {
+		margin-right: -45px;
+	}
+
 	&--gutters > div {
 		padding-right: 65px;
 	}
 
+	&--gutters-large > div {
+		padding-right: 100px;
+	}
+
+	&--gutters-small > div {
+		padding-right: 45px;
+	}
+
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
+	}
+
+	&--t-padding {
+		padding-top:80px;
 	}
 
 	@mixin atMedium {
@@ -30,6 +50,11 @@
 			width: 37%;
 		}
 
+		&__medium-6 {
+			float:left;
+			width: 50%;
+		}
+
 		&__medium-8 {
 			float:left;
 			width: 66.66%;
@@ -40,6 +65,66 @@
 			width: 63%;
 		}
 
+
+	}
+
+	@mixin atLarge {
+
+		&__b-margin-until-large {
+			margin-bottom: 0;
+		}
+
+		&__large-4 {
+			float: left;
+			width: 33.33%;
+		}
+
+		&__large-4-larger {
+			float: left;
+			width: 37%;
+		}
+
+		&__large-6 {
+			float:left;
+			width: 50%;
+		}
+
+		&__large-8 {
+			float:left;
+			width: 66.66%;
+		}
+
+		&__large-8-smaller {
+			float:left;
+			width: 63%;
+		}
+
+
+	}
+
+	/* begin equal height rules */
+
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display:flex;
+		}
+
+		& > div {
+		float:none;
+		display:flex;
+		}
+
+	}
+
+	&--equal-height-at-large {
+		@mixin atLarge {
+			display:flex;
+		}
+
+		& > div {
+		float:none;
+		display:flex;
+		}
 
 	}
 
