--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,7 +5,11 @@
 @import "modules/_wrapper";
 @import "modules/_row";
 @import "modules/_headline";
+@import "modules/_section-title";
+@import "modules/_feature-item";
 @import "modules/_generic-content-container";
 @import "modules/_page-section";
 @import "modules/_large-hero";
+@import "modules/_testimonial";
 @import "modules/_btn";
+@import "modules/_sprite";
