--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,6 +11,11 @@
 
 	@mixin atMedium {
 		background: rgba($mainBlue,0.3);
+		position: fixed;
+
+		&--dark {
+			background-color: rgba(23, 51, 72, .85);
+		}
 	}
 
 	&__button-container {
@@ -28,10 +33,15 @@
 		left: 50%;
 		transform: translateX(-50%) scale(0.8);
 		transform-origin: 50% 0;
+		transition: transform 0.3s ease-out;
 
 		@mixin atMedium {
 			left: auto;
 			transform: translateX(0);
+
+			.site-header--dark & {
+				transform:scale(0.56);
+			}
 		}
 	}
 
