--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -9,6 +9,11 @@
 	&--medium {
 		max-width:976px;
 	}
+
+	&--narrow {
+		max-width:500px;
+	}
+
 	.wrapper {
 		padding-left: 0;
 		padding-right: 0;
